[gd_scene format=3 uid="uid://gvvjpok7wa4g"]

[ext_resource type="Texture2D" uid="uid://xgh3dh87jkoh" path="res://entities/enemies/boss/pregnant_boss_tex.png" id="1_052gy"]
[ext_resource type="Script" uid="uid://dx6nmxubl7ca4" path="res://entities/enemies/boss/boss.gd" id="1_gatik"]
[ext_resource type="ArrayMesh" uid="uid://pv5ljqods4b" path="res://entities/enemies/boss/pregnant_boss.obj" id="2_bo42s"]
[ext_resource type="Texture2D" uid="uid://ccplmfiqrw67" path="res://entities/enemies/boss/eye/eye.tres" id="3_8yevx"]
[ext_resource type="PackedScene" uid="uid://ds11r3n3s7v2s" path="res://entities/enemies/boss/rings/ring_inner.tscn" id="3_bo42s"]
[ext_resource type="Script" uid="uid://8w4c1kjgy5g0" path="res://common/nodes/health.gd" id="4_kfv5l"]
[ext_resource type="Script" uid="uid://c58ps3xr345lv" path="res://common/nodes/3d/damage_area_3d.gd" id="5_e83ns"]
[ext_resource type="Script" uid="uid://dls6ti1x2q5gs" path="res://common/nodes/3d/attack_area_3d.gd" id="6_e83ns"]
[ext_resource type="PackedScene" uid="uid://bmor1o2luredt" path="res://entities/enemies/boss/rings/ring_outer.tscn" id="8_bpi8u"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_052gy"]
shading_mode = 2
albedo_texture = ExtResource("1_052gy")
texture_filter = 2

[sub_resource type="SphereShape3D" id="SphereShape3D_8yevx"]
radius = 1.0

[sub_resource type="BoxShape3D" id="BoxShape3D_8yevx"]
size = Vector3(0.75, 1.882, 0.25)

[sub_resource type="SphereShape3D" id="SphereShape3D_bpi8u"]
radius = 0.3

[sub_resource type="Animation" id="Animation_bpi8u"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BossRingInner:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BossRingOuter:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PregnantBoss:position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PregnantBoss:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("BossRingInner:scale:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("BossRingInner:scale:y")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/6/type = "bezier"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("BossRingInner:scale:z")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/7/type = "bezier"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("BossRingOuter:scale:x")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/8/type = "bezier"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("BossRingOuter:scale:y")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/9/type = "bezier"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("BossRingOuter:scale:z")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_0qjgw"]
resource_name = "defeat"
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [false],
"method": &"set_battling"
}, {
"args": [],
"method": &"defeat"
}]
}

[sub_resource type="Animation" id="Animation_gatik"]
resource_name = "start"
length = 8.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BossRingInner:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 6.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BossRingOuter:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PregnantBoss:position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(1, 0, 0, 0),
"points": PackedFloat32Array(20, 0, 0, 0, 0, 3, -0.3327744, -6.6595316, 0, 0, 3, 0, 0, 1, 0, 0, -0.3000002, -3.5636287, 0, 0),
"times": PackedFloat32Array(0, 1, 7, 8)
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PregnantBoss:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 4, 5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 3.1415927, 0), Vector3(0, 3.1415927, 0), Vector3(0, 0, 0)]
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("BossRingInner:scale:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0.01, -0.25, 0, 0.25, 0, 1, -0.083333336, 0.16666667, 0, 0),
"times": PackedFloat32Array(6.2, 6.7)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("BossRingInner:scale:y")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0.01, -0.25, 0, 0.25, 0, 1, -0.083333336, 0.0016666667, 0, 0),
"times": PackedFloat32Array(6.2, 6.7)
}
tracks/6/type = "bezier"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("BossRingInner:scale:z")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0.01, -0.25, 0, 0.25, 0, 1, -0.083333336, 0.0016666667, 0, 0),
"times": PackedFloat32Array(6.2, 6.7)
}
tracks/7/type = "bezier"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("BossRingOuter:scale:x")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0.1, -0.25, 0, 0.25, 0, 1, -0.083333336, 0, 0, 0),
"times": PackedFloat32Array(6, 6.5)
}
tracks/8/type = "bezier"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("BossRingOuter:scale:y")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0.1, -0.25, 0, 0.25, 0, 1, -0.083333336, 0, 0, 0),
"times": PackedFloat32Array(6, 6.5)
}
tracks/9/type = "bezier"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("BossRingOuter:scale:z")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0.1, -0.25, 0, 0.25, 0, 1, -0.083333336, 0, 0, 0),
"times": PackedFloat32Array(6, 6.5)
}
tracks/10/type = "method"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("BossRingInner")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(8),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [true],
"method": &"set_active"
}]
}
tracks/11/type = "method"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("BossRingOuter")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(8),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [true],
"method": &"set_active"
}]
}
tracks/12/type = "method"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath(".")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(8),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [true],
"method": &"set_battling"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0qjgw"]
_data = {
&"RESET": SubResource("Animation_bpi8u"),
&"defeat": SubResource("Animation_0qjgw"),
&"start": SubResource("Animation_gatik")
}

[node name="Boss" type="Node3D" unique_id=1748494701]
script = ExtResource("1_gatik")

[node name="PregnantBoss" type="MeshInstance3D" parent="." unique_id=365213745]
mesh = ExtResource("2_bo42s")
surface_material_override/0 = SubResource("StandardMaterial3D_052gy")

[node name="Eye" type="Sprite3D" parent="PregnantBoss" unique_id=1365057311]
transform = Transform3D(-1, 0, -8.742278e-08, 0, 1, 0, 8.742278e-08, 0, -1, 0, 0, -0.376)
cast_shadow = 0
pixel_size = 0.005
double_sided = false
texture = ExtResource("3_8yevx")

[node name="DamageArea3D" type="Area3D" parent="." unique_id=377680181 node_paths=PackedStringArray("health")]
collision_layer = 0
collision_mask = 4
monitorable = false
script = ExtResource("5_e83ns")
health = NodePath("../Health")
metadata/_custom_type_script = "uid://c58ps3xr345lv"

[node name="CollisionShape3D" type="CollisionShape3D" parent="DamageArea3D" unique_id=800757755]
shape = SubResource("SphereShape3D_8yevx")

[node name="AttackArea3D" type="Area3D" parent="." unique_id=649190599]
collision_layer = 16
collision_mask = 0
monitoring = false
script = ExtResource("6_e83ns")
metadata/_custom_type_script = "uid://dls6ti1x2q5gs"

[node name="CollisionShape3D" type="CollisionShape3D" parent="AttackArea3D" unique_id=371746983]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.125)
shape = SubResource("BoxShape3D_8yevx")
debug_color = Color(0.99813694, 0, 0.16056597, 0.41960785)

[node name="CollisionShape3D2" type="CollisionShape3D" parent="AttackArea3D" unique_id=74619741]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.07406592)
shape = SubResource("SphereShape3D_bpi8u")
debug_color = Color(1, 0, 0.16078432, 0.41960785)

[node name="Health" type="Node" parent="." unique_id=1605493700]
script = ExtResource("4_kfv5l")
max_value = 10
metadata/_custom_type_script = "uid://8w4c1kjgy5g0"

[node name="BossRingInner" parent="." unique_id=556162616 instance=ExtResource("3_bo42s")]

[node name="BossRingOuter" parent="." unique_id=690258987 instance=ExtResource("8_bpi8u")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=2113919684]
libraries/ = SubResource("AnimationLibrary_0qjgw")
autoplay = &"start"

[connection signal="reached_zero" from="Health" to="." method="_on_health_reached_zero"]
